--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="keywords" content="cheers in different languages quiz">
     <meta name="author" content="Bianca">
     <link rel="stylesheet" href="assets/style.css">
-    <script defer src="script.js"></script>
     <title>Cheers Quiz</title>
 </head>
 
@@ -34,14 +33,11 @@
                     <button class="button">4</button>
                 </div>
             </div>
-
             <div class="controls">
                 <button id="start-button" class="start-button button">Start</button>
                 <button id="next-button" class="next-button button hide">Next</button>
             </div>
-
         </div>
-
     </main>
 
     <!--Footer-->
@@ -62,6 +58,7 @@
         </ul>
     </footer>
 
+    <script src="assets/script.js"></script>
     <!--Font Awesome icons-->
     <script src="https://kit.fontawesome.com/c6099e5633.js" crossorigin="anonymous"></script>
 
