Reset previous questions in function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="How to say cheers in different languages quiz ">
     <meta name="keywords" content="cheers in different languages quiz">
     <meta name="author" content="Bianca">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Cheers Quiz</title>
 </head>
 
@@ -58,7 +58,7 @@
         </ul>
     </footer>
 
-    <script src="assets/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <!--Font Awesome icons-->
     <script src="https://kit.fontawesome.com/c6099e5633.js" crossorigin="anonymous"></script>
 
