--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div class="container">
             <div id="quiz-box" class="hide">
-                <h2 id="question"></h2>
+                <h2 id="question">question</h2>
                 <div id="answer-buttons" class="button-grid">
                     <button class="button"></button>
                     <button class="button"></button>
